small detail update

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     <em>demo</em>
                     website!
                 </h2>
-                <a target="_blank" class="btn btn-primary btn-xl" href="https://github.com/N-moh">View Source Code</a>
+                <a target="_blank" class="btn btn-primary btn-xl" href="https://github.com/N-moh/portfolio_website.git">View Source Code</a>
             </div>
         </section>
         <!-- Portfolio-->
